apps/applications/games/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: rommapp/romm
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config-file
              mountPath: /romm/config/config.yml
              subPath: config.yml
            - name: romm-storage
              mountPath: /romm/resources
              subPath: resources
            - name: romm-storage
              mountPath: /romm/library
              subPath: library
            - name: romm-storage
              mountPath: /romm/assets
              subPath: assets
            - name: romm-storage
              mountPath: /romm/config
              subPath: config
            - name: redis-data
              mountPath: /redis-data
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 65534
        fsGroupChangePolicy: Always
      volumes:
        - name: romm-storage
          persistentVolumeClaim:
            claimName: romm-pvc
        - name: redis-data
          emptyDir: {}
        - name: config-file
          configMap:
            name: romm-config
