apps/applications/games/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-ui
  namespace: home
spec:
  selector:
    app: romm
  ports:
    - name: http
      port: 8080
