apps/applications/games/romm/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: romm-policy
  namespace: games
spec:
  endpointSelector:
    matchLabels:
      app: romm

  # ----=== Egress ===----
  egress:
    # === Allow Egress to Traefik for Hairpinning (for OIDC) ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
            - port: "9443"
              protocol: TCP

    # === Allow Egress to fortress.kerrlab.app:3306 ===
    - toCIDR:
        - "10.10.1.218/32"
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
    # === Allow Internet Access ===
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
